[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ipfs_tk"
version = "0.1.2"
description = "A set of tools for working with IPFS in Python, agnostic of Python-IPFS interfaces."
readme = {file = "ReadMe.md", content-type = "text/markdown"}
requires-python = ">=3.6"
authors = [
    {name = "emendir"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]

[project.urls]
Homepage = "https://ipfs.io/ipns/k2k4r8k7h909zdodsvbxe32sahpfdkqcqqn1npblummw4df6iv7dj5xh#IPFS-Toolkit"
Github = "https://github.com/emendir/IPFS-Toolkit-Python"
# Source Code on IPNS = "https://ipfs.io/ipns/k2k4r8k7h909zdodsvbxe32sahpfdkqcqqn1npblummw4df6iv7dj5xh"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}